Fix for Mac OS X where the prefwindow bottom is cut off (issue #9)

--- a/src/chrome/skin/all/options.css
+++ b/src/chrome/skin/all/options.css
@@ -29,6 +29,12 @@ prefwindow {
   min-width: 32em;
 }
 
+/* Fix for Mac OS X issue where pref dialog heights are sometimes wrong. */
+prefpane > .content-box,
+prefwindow > .paneDeckContainer {
+  overflow: visible;
+}
+
 prefpane description {
   font: message-box;
 }
